<resources>
    <string name="app_name">智慧小屋示例</string>
    <string name="app_title">智能嵌入式智慧小屋</string>
    <string name="title_living">智慧小屋-客厅</string>
    <string name="title_bed">智慧小屋-卧室</string>
    <string name="title_kitchen">智慧小屋-厨房</string>
    <string name="title_bath">智慧小屋-浴室</string>
    <string name="door_name">入户门</string>
    <string name="noise_detect">噪声监测</string>
    <string name="living_light">客厅的灯</string>
    <string name="light_band">灯带</string>
    <string name="light_roof">房梁的灯</string>
    <string name="color_control">颜色控制</string>
    <string name="mode_control">模式控制</string>
    <string name="mode_one">模式一</string>
    <string name="mode_two">模式二</string>
    <string name="mode_three">模式三</string>
    <string name="bed_light">卧室的灯</string>
    <string name="environment_detect">环境监测</string>
    <string name="temperature">温度</string>
    <string name="humidity">湿度</string>
    <string name="illumination">光照</string>
    <string name="pressure">气压</string>
    <string name="yuba">浴霸</string>
    <string name="heater">热水器</string>
    <string name="fan">排气扇</string>
    <string name="curtain">窗帘</string>
    <string name="bath_light">浴室的灯</string>
    <string name="kitchen_light">厨房的灯</string>
    <string name="CO_detect">一氧化碳浓度</string>
    <string name="extractor">抽油烟机</string>
    <string name="request_house_number">请输入智慧小屋编号</string>
    <string name="confirm">确认</string>
    <string name="fireAlarm">火焰报警</string>
    <string name="gasAlert">燃气报警</string>
    <string name="autoOff">09:00自动打开</string>
    <string name="autoOn">18:00自动关闭</string>
    <string name="app_name_full">智能嵌入式智慧小屋</string>
    <string name="company">厦门芯力量物联网实验室有限责任公司</string>
    <string name="about">关于</string>
    <string name="window">窗户</string>
    <string name="app_title_demo">远程控制示例程序</string>
</resources>