<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/theme_color"
        android:elevation="4dp"
        android:nestedScrollingEnabled="false"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/toolbarLogo"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:srcCompat="@drawable/logo_white"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="visible"
            tools:visibility="visible" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans_gray"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/linear_border"
            android:visibility="visible"
            tools:visibility="visible">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/request_house_number"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/houseNumber"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="25dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="LabelFor,TextFields,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirm_button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/confirm"
                    android:textSize="20sp"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    app:backgroundTint="@color/teal_200"
                    app:cornerRadius="10sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>