<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bed_back"
    tools:context="com.ichippower.smarthousedemo.ui.bed.BedFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/trans_gray"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextClock
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format12Hour="hh:mm"
                android:format24Hour="HH:mm"
                android:paddingStart="20dp"
                android:paddingTop="@dimen/welcome_padding"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextClock
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format12Hour="yyyy年MM月dd日 EEEE"
                android:format24Hour="yyyy年MM月dd日 EEEE"
                android:paddingStart="20dp"
                android:paddingBottom="30dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/linear_border"
                    android:visibility="visible"
                    tools:visibility="visible">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/red_light" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="100dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/bed_light"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <ToggleButton
                            android:id="@+id/switchBedLight"
                            android:layout_width="90dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/togglebtn_check"
                            android:checked="false"
                            android:disabledAlpha="1"
                            android:textOff=""
                            android:textOn="" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:paddingBottom="?actionBarSize"
                app:layout_constraintBottom_toBottomOf="@id/tv_date">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/linear_border"
                    android:visibility="visible"
                    tools:visibility="visible">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/environment" />

                    <LinearLayout
                        android:id="@+id/environment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/environment_detect"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="@string/temperature"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="22sp" />

                            <TextView
                                android:id="@+id/temperatureText"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="28℃"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="湿度"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="22sp" />

                            <TextView
                                android:id="@+id/humidityText"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="40%"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="@string/illumination"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="22sp" />

                            <TextView
                                android:id="@+id/illuminationText"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="900 Lux"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="22sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="@string/pressure"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="22sp" />

                            <TextView
                                android:id="@+id/pressureText"
                                android:layout_width="0dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                android:text="101 kPa"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="22sp" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>